# Advanced-AI-Research-System

./: .coverage  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/kairon/: config.py  draft_agent.py  orchestrator.py  quality_agent.py  research_agent.py
tests/: conftest.py  test_draft_agent.py  test_quality_agent.py  test_research_agent.py  test_research_system.py
